--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <button class="menu-btn" onclick="toggleMenu()">&#9776;</button>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="./Html/about.html">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
             <a href="#">Our Team</a>
