recipes pages added

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 <li><i class="fa-solid fa-angles-right"></i> <a href="#">Desi</a></li>
                 <li><i class="fa-solid fa-angles-right"></i> <a href="#">Italian</a></li>
                 <li><i class="fa-solid fa-angles-right"></i> <a href="#">Chinese</a></li>
-                <li><i class="fa-solid fa-angles-right"></i> <a href="#">Desserts</a></li>
-                <li><i class="fa-solid fa-angles-right"></i> <a href="#">Drinks</a></li>
+                <li><i class="fa-solid fa-angles-right"></i> <a href="./Html/desserts.html">Desserts</a></li>
+                <li><i class="fa-solid fa-angles-right"></i> <a href="./Html/drinks.html">Drinks</a></li>
             </ul>
         </div>
         <!-- Contact Us -->
