--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BornToBeChef</title>
   <!-- bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- fontawesome cdn -->
@@ -51,7 +52,7 @@
       </div>
       <div class="login">
         <a href="user" class="user"><i class="fa-regular fa-user ms-3"></i></a>
-        <a href="#" class="login1">Login | </a>
+        <a href="./Html/login.html" class="login1">Login | </a>
         <a href="#"> Register</a>
       </div>
     </div>
@@ -70,33 +71,7 @@
         <div class="logo">
           <img src="./assets/foodfiesta.png" alt="logoimage">
         </div>
-
-        <!-- hamburger -->
-        <!-- <header class="header">
-        <div class="container">
-          <button class="menu-toggle" type="button">
-            <div class="hamburger">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </button>
-          <div class="menu">
-            <ul class="menu-list">
-              <li class="menu-item"><a href="#" class="menu-link">Ramzan</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Fried Items</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Biryani & Pulao</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Parathas</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Healthy</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Desserts</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Chutneys & Dips</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Pizzas</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Homemade</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">Burgers & Sandwiches</a></li>
-            </ul>
-          </div>
-        </div>
-      </header> -->
+      </header>
 
       </div>
 
@@ -678,7 +653,10 @@
     </div>
   </footer>
 
-  <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="./firebase/firebaseconfig.js"></script>
+  <script src="./JavaScript/login.js"></script>
   <script src="./JavaScript/index.js"></script>
 </body>
 
