--- a/main.html
+++ b/main.html
@@ -1,24 +1,5 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-    <title>main</title>
-</head>
-<body>
-    <!-- <div class="card-contasiner">
-        
-    </div>
-
-    <script src="./recipe.js"></script> -->
-    <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -74,7 +55,7 @@
 
           card.innerHTML = `
             <div class="card">
-              <img src="${recipe.imageUrl}" class="card-img-top" alt="${recipe.name}">
+              <img src="${recipe.image}" class="card-img-top" alt="${recipe.name}">
               <div class="card-body">
                 <h5 class="card-title">${recipe.name}</h5>
                 <p class="card-text">${recipe.description}</p>
@@ -89,6 +70,7 @@
       })
       .catch(error => console.error('Error fetching data:', error));
   </script>
+  
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -97,5 +79,3 @@
 
    
         
-</body>
-</html>
