--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
       </span>/ <span>All</span></p>
 
 
-    <div class="container-xxl">
-      <div class="row g-4">
+    <div class="container-xxl" id="maincardcontainer">
+      <!-- <div class="row g-4"> -->
 
 
         <!-- Recipe Card 1 -->
 
 
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-3">
           <div class="card">
             <div class="position-relative">
               <img
@@ -346,7 +346,7 @@
           </div>
         </div>
 
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -656,7 +656,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./firebase/firebaseconfig.js"></script>
-  <script src="./JavaScript/login.js"></script>
+  <!-- <script src="./JavaScript/login.js"></script> -->
   <script src="./JavaScript/index.js"></script>
 </body>
 
