--- a/Html/about.html
+++ b/Html/about.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../css/about.css">
+  <link rel="stylesheet" href="../CSS/about.css">
 </head>
 
 <body>
+  <h1>gudfviueifwqp emf v</h1>
   <!-- <div class="about-section">
    
    
@@ -62,7 +63,7 @@
 
 
   <div class="medal">
-    <img src="./asessts/medal.png" alt="" class="medalImage">
+    <img src="../Assets/medal.png" alt="" class="medalImage">
   </div>
 
 
@@ -128,7 +129,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <div class="footer-logo">
-            <img src="Assets/logo-brown-white.png" alt="Born To Be Chef Logo">
+            <img src="../Assets/logo-brown-white.png" alt="Born To Be Chef Logo">
           </div>
           <p class="footer-text">Born To Be Chef is all about redefining ‘Cooking’ for you! It’s the solution to
             that never ending problem of preparing high quality delicious food and curtailing the eating out
@@ -180,7 +181,7 @@
 
   </html>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="../js/about.js"></script>
+  <script src="../JavaScript/about.js"></script>
 </body>
 
 </html>
