--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
       <div class="login">
         <a href="user" class="user"><i class="fa-regular fa-user ms-3"></i></a>
-        <a href="./Html/login.html" class="login1">Login | </a>
-        <a href="#"> Register</a>
+        <a href="#" class="login1">Login | </a>
+        <a href="#" class="signup1">Register</a>
       </div>
     </div>
   </div>
@@ -422,6 +422,92 @@
 
 
 
+  <!-- Signup Modal -->
+  <div id="signupmodal" class="signup-overlay">
+    <div class="signup-container">
+      <button class="close-signup">&times;</button>
+      <div class="signup-header">
+        <h1>Create Account</h1>
+        <p>Join our community today</p>
+      </div>
+      <form id="signupForm">
+        <div class="name-fields">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" required placeholder="Enter first name">
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" required placeholder="Enter last name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" required placeholder="Enter your email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" required placeholder="Create password">
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm Password</label>
+          <input type="password" id="confirmPassword" required placeholder="Confirm password">
+        </div>
+        <div class="terms-wrapper">
+          <input type="checkbox" id="terms" required>
+          <label for="terms">
+            I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
+          </label>
+        </div>
+        <button type="submit" class="signup-button">Create Account</button>
+        <div class="divider">
+          <div class="divider-line"></div>
+          <span class="divider-text">or continue with</span>
+          <div class="divider-line"></div>
+        </div>
+
+        <button type="button" class="google-btn">
+          <img src="https://www.svgrepo.com/show/303108/google-icon-logo.svg" alt="Google" width="20" height="20">
+          <span>Sign up with Google</span>
+        </button>
+        <div class="login-text">
+          Already have an account? <a href="#" id="switchToLogin">Log in</a>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Login Modal -->
+  <div class="login-overlay">
+    <div class="modal">
+      <button class="close-login">&times;</button>
+      <div class="modal-header">
+        <h1>Welcome Back</h1>
+        <p>Please enter your credentials</p>
+      </div>
+      <form id="loginForm">
+        <div class="input-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" required placeholder="Enter your email">
+        </div>
+        <div class="input-group">
+          <label for="login-password">Password</label>
+          <input type="password" id="login-password" required placeholder="Enter your password">
+        </div>
+        <div class="options">
+          <div class="checkbox-container">
+            <input type="checkbox" id="remember">
+            <label for="remember">Remember me</label>
+          </div>
+          <a href="#" class="forgot">Forgot Password?</a>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+      </form>
+      <div class="signup">
+        Don't have an account? <a href="#" id="switchToSignup">Sign up</a>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -467,15 +553,20 @@
           </ul>
 
         </div>
-        <!-- Contact Us -->
+
+        <!--Navigation -->
         <div class="footer-section">
-          <h3 class="footer-heading">Contact Us</h3>
-          <div class="footer-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
+
+          <h3 class="footer-heading">Navigation</h3>
+          <ul class="footer-list">
+            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Home</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="#">About Us</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Contact Us</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Our Team</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Profile</a></li>
+          </ul>
+
+        </div>
         </div>
       </div>
     </footer>
@@ -487,11 +578,15 @@
     </div>
   </footer>
 
+
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./firebase/firebaseconfig.js"></script>
   <!-- <script src="./JavaScript/login.js"></script> -->
   <script src="./JavaScript/index.js"></script>
+
 </body>
 
 </html>
