--- a/index.html
+++ b/index.html
@@ -52,67 +52,64 @@
       </div>
       <div class="login">
         <a href="user" class="user"><i class="fa-regular fa-user ms-3"></i></a>
-        <a href="./Html/login.html" class="login1">Login | </a>
-        <a href="#"> Register</a>
+        <a href="#" class="login1">Login | </a>
+        <a href="#" class="signup1"> Register</a>
       </div>
     </div>
   </div>
 
 
   <!-- Second Navigation -->
-  <nav>
-
-    <div class="navigation-menu container-xxl d-flex justify-content-between align-items-center">
-
-
-
-      <div class="nav-left">
-
+  <nav class="navbar navbar-expand-lg ">
+    <div class="container-xxl">
         <div class="logo">
-          <img src="./assets/foodfiesta.png" alt="logoimage">
-        </div>
-        </header>
-
-      </div>
-
-
-
-      <div class="nav-right">
-        <button class="menu-btn" onclick="toggleMenu()">☰</button>
-        <div class="menu">
-
-          <div class="nav-container">
-            <a href="#" class="nav-link ">Ramzan</a>
-            <a href="#" class="nav-link">Drinks</a>
-            <a href="#" class="nav-link">Dish Type</a>
-            <a href="#" class="nav-link">Breakfast</a>
-            <a href="#" class="nav-link">Desserts</a>
-            <a href="#" class="nav-link">Lunch / Dinner</a>
+            <img src="./assets/foodfiesta.png" alt="logoimage">
           </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-grow-1 justify-content-end gap-2">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Ramzan</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Drinks</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Dish Type</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Desserts</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Breakfast</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Lunch / Dinner</a>
+                </li>
 
-          <div class="box">
-            <div class="input-wrapper">
-              <button class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="25px" width="25px">
-                  <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff"
-                    d="M11.5 21C16.7467 21 21 16.7467 21 11.5C21 6.25329 16.7467 2 11.5 2C6.25329 2 2 6.25329 2 11.5C2 16.7467 6.25329 21 11.5 21Z">
-                  </path>
-                  <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff"
-                    d="M22 22L20 20">
-                  </path>
-                </svg>
-              </button>
-              <input placeholder="Aaj kya pakana hai?" class="input text-dark" name="text" type="text">
-            </div>
-          </div>
-
-
+            </ul>
+            <div class="box">
+                <div class="input-wrapper">
+                  <button class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="25px" width="25px">
+                      <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff"
+                        d="M11.5 21C16.7467 21 21 16.7467 21 11.5C21 6.25329 16.7467 2 11.5 2C6.25329 2 2 6.25329 2 11.5C2 16.7467 6.25329 21 11.5 21Z">
+                      </path>
+                      <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff"
+                        d="M22 22L20 20">
+                      </path>
+                    </svg>
+                  </button>
+                  <input placeholder="Aaj kya pakana hai?" class="input text-dark" name="text" type="text">
+                </div>
+              </div>    
         </div>
-      </div>
-
     </div>
-
-  </nav>
+</nav>
 
 
   <section class="hero-section">
@@ -422,7 +419,92 @@
 
 
 
+  <!-- Signup Modal -->
+  <div id="signupmodal" class="signup-overlay">
+    <div class="signup-container">
+      <button class="close-signup">&times;</button>
+      <div class="signup-header">
+        <h1>Create Account</h1>
+        <p>Join our community today</p>
+      </div>
+      <form id="signupForm">
+        <div class="name-fields">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" required placeholder="Enter first name">
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" required placeholder="Enter last name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" required placeholder="Enter your email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" required placeholder="Create password">
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm Password</label>
+          <input type="password" id="confirmPassword" required placeholder="Confirm password">
+        </div>
+        <div class="terms-wrapper">
+          <input type="checkbox" id="terms" required>
+          <label for="terms">
+            I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
+          </label>
+        </div>
+        <button type="submit" class="signup-button">Create Account</button>
+        <div class="divider">
+          <div class="divider-line"></div>
+          <span class="divider-text">or continue with</span>
+          <div class="divider-line"></div>
+        </div>
 
+        <button type="button" class="google-btn">
+          <img src="https://www.svgrepo.com/show/303108/google-icon-logo.svg" alt="Google" width="20" height="20">
+          <span>Sign up with Google</span>
+        </button>
+        <div class="login-text">
+          Already have an account? <a href="#" id="switchToLogin">Log in</a>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Login Modal -->
+  <div class="login-overlay">
+    <div class="modal">
+      <button class="close-login">&times;</button>
+      <div class="modal-header">
+        <h1>Welcome Back</h1>
+        <p>Please enter your credentials</p>
+      </div>
+      <form id="loginForm">
+        <div class="input-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" required placeholder="Enter your email">
+        </div>
+        <div class="input-group">
+          <label for="login-password">Password</label>
+          <input type="password" id="login-password" required placeholder="Enter your password">
+        </div>
+        <div class="options">
+          <div class="checkbox-container">
+            <input type="checkbox" id="remember">
+            <label for="remember">Remember me</label>
+          </div>
+          <a href="#" class="forgot">Forgot Password?</a>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+      </form>
+      <div class="signup">
+        Don't have an account? <a href="#" id="switchToSignup">Sign up</a>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -490,8 +572,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./firebase/firebaseconfig.js"></script>
-  <!-- <script src="./JavaScript/login.js"></script> -->
   <script src="./JavaScript/index.js"></script>
 </body>
 
-</html>
+</html> 
