--- a/index.html
+++ b/index.html
@@ -576,10 +576,10 @@
 
 
 
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./firebase/firebaseconfig.js"></script>
+  <script src="./JavaScript/lunchDinner.js"></script>
   <script src="./JavaScript/index.js"></script>
 
 </body>
