--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BornToBeChef</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- bootstrap -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+
   <!-- fontawesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -50,10 +52,15 @@
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      <div class="login">
+      <div class="login" id="authentication">
         <a href="user" class="user"><i class="fa-regular fa-user ms-3"></i></a>
         <a href="#" class="login1">Login | </a>
         <a href="#" class="signup1">Register</a>
+      </div>
+
+      <div id="profile" class="d-flex text-light gap-2 justify-content-center align-items-center" style="display: none !important;">
+        <p id="username" class="mb-0">whatever</p>
+        <img id="pfp" src="./Assets/user.jpg" alt="" style="width: 30px; height: 30px; border-radius: 50%;">
       </div>
     </div>
   </div>
@@ -65,8 +72,8 @@
         <div class="logo">
             <img src="./assets/foodfiesta.png" alt="logoimage">
           </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        <button  class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -111,6 +118,42 @@
     </div>
 </nav>
 
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav> -->
 
   <section class="hero-section">
     <div class="container-xxl">
@@ -446,24 +489,20 @@
           <label for="password">Password</label>
           <input type="password" id="password" required placeholder="Create password">
         </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirm Password</label>
-          <input type="password" id="confirmPassword" required placeholder="Confirm password">
-        </div>
         <div class="terms-wrapper">
           <input type="checkbox" id="terms" required>
           <label for="terms">
             I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
           </label>
         </div>
-        <button type="submit" class="signup-button">Create Account</button>
+        <button type="submit" id="signup" class="signup-button">Create Account</button>
         <div class="divider">
           <div class="divider-line"></div>
           <span class="divider-text">or continue with</span>
           <div class="divider-line"></div>
         </div>
 
-        <button type="button" class="google-btn">
+        <button type="button" class="google-btn" id="google-signup">
           <img src="https://www.svgrepo.com/show/303108/google-icon-logo.svg" alt="Google" width="20" height="20">
           <span>Sign up with Google</span>
         </button>
@@ -475,7 +514,7 @@
   </div>
 
   <!-- Login Modal -->
-  <div class="login-overlay">
+  <div id="loginmodal" class="login-overlay">
     <div class="modal">
       <button class="close-login">&times;</button>
       <div class="modal-header">
@@ -556,11 +595,10 @@
 
           <h3 class="footer-heading">Navigation</h3>
           <ul class="footer-list">
-            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Home</a></li>
-            <li><i class="fa-solid fa-angles-right"></i> <a href="#">About Us</a></li>
-            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Contact Us</a></li>
-            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Our Team</a></li>
-            <li><i class="fa-solid fa-angles-right"></i> <a href="#">Profile</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="./index.html">Home</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="./Html/about.html">About Us</a></li>
+            <li><i class="fa-solid fa-angles-right"></i> <a href="./Html/contact.html">Contact Us</a></li>
+          
           </ul>
 
         </div>
@@ -576,11 +614,11 @@
   </footer>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./firebase/firebaseconfig.js"></script>
+<script type="module" src="./JavaScript/signup.js"></script>
+<script type="module" src="./JavaScript/login.js"></script>
   <script src="./JavaScript/index.js"></script>
 
 </body>
