--- a/Html/homeD.html
+++ b/Html/homeD.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../CSS/dtail.css">
@@ -13,14 +15,15 @@
     <div class="container mt-5">
         <div id="con"></div>
     </div>
-
+    
     <script>
         // Function to get query parameters from URL
         let searchParams = (param) => {
             let urlParams = new URLSearchParams(window.location.search);
             return urlParams.get(param);
         };
-
+        let shre =  window.location.href
+        // console.log(shre);
         let displayCardss = async () => {
             let idd = searchParams("id"); // Get meal ID from URL
             let ele = document.getElementById('con');
@@ -46,9 +49,32 @@
                                 <h1 id="recipeTitle" class="mb-1">${dessert.strMeal}</h1>
                                 <p class="recipe-date mb-4" id="recipeDate">SEPTEMBER 23RD, 2023</p>
                                 <div class="social-share mb-2">
-                                    <a href="#" class="social-icon">
-                                        <i class="fas fa-share"></i>
-                                    </a>
+                                  <a href="#" id="view-modal" class="social-icon">
+        <i class="fas fa-share"></i>
+    </a>
+   
+    <div class="popup">
+      <header>
+        <span style="color:var(--blue);">Share with your friends</span>
+        <div class="close"><i class="uil uil-times"></i></div>
+      </header>
+      <div class="content">
+        <p style="color:var(--bodytext);">Share this link via</p>
+        <ul class="icons p-0">
+          <a href="https://www.facebook.com/?u=${shre}" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/intent/tweet?url=${shre}" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/?url=${shre}"  target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://web.whatsapp.com/?url=${shre}"  target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://t.me/share/url?url=${shre}" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+        </ul>
+        <p>Or copy link</p>
+        <div class="field">
+          <i style="color:var(--bodytext);" class="url-icon uil uil-link "></i>
+          <input type="text" readonly value="${shre}">
+          <button id="copy">Copy</button>
+        </div>
+      </div>
+    </div>
                                     <a href="#" id="print-link" class="social-icon">
                                         <i class="fas fa-print"></i> 
                                     </a>
@@ -120,9 +146,37 @@
             } else {
                 ele.innerHTML = `<h2 class="text-danger">Recipe ID not found</h2>`;
             }
+            
+            const viewBtn = document.querySelector("#view-modal"),
+    popup = document.querySelector(".popup"),
+    close = popup.querySelector(".close"),
+    field = popup.querySelector(".field"),
+    input = field.querySelector("input"),
+    copy = field.querySelector("#copy");
+
+    viewBtn.onclick = ()=>{ 
+      popup.classList.toggle("show");
+    }
+    close.onclick = ()=>{
+      viewBtn.click();
+    }
+
+    copy.onclick = ()=>{
+      input.select(); //select input value
+      if(document.execCommand("copy")){ //if the selected text is copied
+        field.classList.add("active");
+        copy.innerText = "Copied";
+        setTimeout(()=>{
+          window.getSelection().removeAllRanges(); //remove selection from page
+          field.classList.remove("active");
+          copy.innerText = "Copy";
+        }, 3000);
+      }
+    }
         };
 
         displayCardss();
+
     </script>
 
 </body>
