--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
       <!-- popup container -->
       <div class="popup-container" id="popupContainer">
         <div class="popup-header">
-          <span >hajramasif@gmail.com</span>
+          <span id="userEmail"></span>
           <span class="close-btn" id="closeBtn">&times;</span>
         </div>
 
@@ -251,7 +251,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
           <div class="profile-img" id="useraplha">
            
           </div>
-          <h5>Hi, Hajra!</h5>
+          <h5 id="userName"></h5>
           <button href class="manage-account-btn" id="manageAccountBtn">
             Manage your Food feista Account
           </button>
