--- a/Dashboard/profile.html
+++ b/Dashboard/profile.html
@@ -43,10 +43,8 @@
             <main class="content">
                 <header>
                     <h2>Update Profile</h2>
-                    <div class="user-info">
-                        <span id="profilename"></span>
-                        <img src="./assets/HA.jpg" alt="User">
-                    </div>
+                    <button class="profile-trigger" id="profileTrigger">
+                    </button>
                 </header>
             </main>
             <!-- Most Favorites Items -->
@@ -107,5 +105,6 @@
     
 
     <script src="./profile.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="../JavaScript/login.js"></script>
+    <script src="./dashboard.js"></script>
 </body>
