--- a/Dashboard/recipe.html
+++ b/Dashboard/recipe.html
@@ -42,10 +42,8 @@
             <main class="content">
                 <header>
                     <h2>Your Recipes</h2>
-                    <div class="user-info">
-                        <span id="profilename"></span>
-                        <img src="./assets/HA.jpg" alt="User">
-                    </div>
+                    <button class="profile-trigger" id="profileTrigger">
+                    </button>
                 </header>
             </main>
             <!-- Most Favorites Items -->
@@ -94,6 +92,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
-
-    <script src="./index.js"></script>
+    <script type="module" src="../JavaScript/login.js"></script>
+    <script src="./dashboard.js"></script>
 </body>
