--- a/Dashboard/upload.html
+++ b/Dashboard/upload.html
@@ -43,10 +43,8 @@
             <main class="content">
                 <header>
                     <h2>Upload Recipe</h2>
-                    <div class="user-info">
-                        <span id="profilename"></span>
-                        <img src="./assets/HA.jpg" alt="User">
-                    </div>
+                    <button class="profile-trigger" id="profileTrigger">
+                    </button>
                 </header>
             </main>
             <!-- Most Favorites Items -->
@@ -102,6 +100,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
-
-    <script src="./index.js"></script>
+    <script type="module" src="../JavaScript/login.js"></script>
+    <script src="./dashboard.js"></script>
 </body>
