--- a/index.html
+++ b/index.html
@@ -754,10 +754,12 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" required placeholder="Enter your email">
+          <small id="emailError" class="text-danger"></small>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" id="password" required placeholder="Create password">
+          <small id="passwordError" class="text-danger"></small>
         </div>
         <div class="terms-wrapper">
           <input type="checkbox" id="terms" required>
@@ -784,7 +786,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
   </div>
 
   <!-- Login Modal -->
-  <div id="loginmodal" class="login-overlay">
+  <!-- <div id="loginmodal" class="login-overlay">
     <div class="modal">
       <button class="close-login">&times;</button>
       <div class="modal-header">
@@ -805,7 +807,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
             <input type="checkbox" id="remember">
             <label for="remember">Remember me</label>
           </div>
-          <a href="#" class="forgot">Forgot Password?</a>
+          <a href="#" id="forgotpswd" class="forgot">Forgot Password?</a>
         </div>
         <button type="submit" id="login"  class="login-btn">Login</button>
       </form>
@@ -813,7 +815,41 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
         Don't have an account? <a href="#" id="switchToSignup">Sign up</a>
       </div>
     </div>
-  </div>
+  </div> -->
+  <div id="loginmodal" class="login-overlay">
+    <div class="modal">
+        <button class="close-login">&times;</button>
+        <div class="modal-header">
+            <h1>Welcome Back</h1>
+            <p>Please enter your credentials</p>
+        </div>
+        <form id="loginForm">
+            <div class="input-group">
+                <label for="login-email">Email</label>
+                <input type="email" id="login-email" required placeholder="Enter your email">
+                <div id="emailError" class="text-danger error-message"></div> <!-- Email Error Message -->
+            </div>
+            <div class="input-group">
+                <label for="login-password">Password</label>
+                <input type="password" id="login-password" required placeholder="Enter your password">
+                <div id="passwordError" class="text-danger error-message"></div> <!-- Password Error Message -->
+            </div>
+            <div class="options">
+                <div class="checkbox-container">
+                    <input type="checkbox" id="remember">
+                    <label for="remember">Remember me</label>
+                </div>
+                <a href="#" id="forgotpswd" class="forgot">Forgot Password?</a>
+            </div>
+            <div id="loginError" class="error-box" style="display: none;">Invalid username or password.</div> <!-- Main Error Box -->
+            <button type="submit" id="login-btn" class="login-btn">Login</button>
+        </form>
+        <div class="signup">
+            Don't have an account? <a href="#" id="switchToSignup">Sign up</a>
+        </div>
+    </div>
+</div>
+
 
 
 
