work in progress

--- a/AdminDashboard/settings.html
+++ b/AdminDashboard/settings.html
@@ -33,15 +33,11 @@
 
             <img src="../Assets/foodfiesta-white.png" class="ps-3" style="height: 80px;" alt="">
             <nav class="nav flex-column pt-3">
-                <a class="nav-link text-align-center" href="../index.html"><i
-                        class="fa-solid fa-house me-3"></i>Home</a>
-                <a class="nav-link " href="./dashboard.html"><i
-                        class="fa-solid fa-table-columns me-3"></i>Dashboard</a>
+                <a class="nav-link text-align-center" href="../index.html"><i class="fa-solid fa-house me-3"></i>Home</a>
+                <a class="nav-link " href="./admindashboard.html"><i class="fa-solid fa-table-columns me-3"></i>Dashboard</a>
                 <a class="nav-link " href="./recipe.html" id="myrecipe"><i class="fa-solid fa-utensils me-3"></i>My
                     Recipes</a>
-                <a class="nav-link" href="./upload.html"><i class="fa-solid fa-cookie-bite me-3"></i></i>Upload
-                    Recipe</a>
-                <a class="nav-link " href="./profile.html"><i class="fas fa-users me-2"></i>Profile</a>
+                <a class="nav-link" href="./upload.html"><i class="fa-solid fa-cookie-bite me-3"></i></i>Upload Recipe</a>
                 <a class="nav-link active" href="./settings.html"><i class="fa-solid fa-gear me-3"></i>Settings</a>
                 <a class="nav-link" id="signout" href="#"><i class="fa-solid fa-right-from-bracket me-3"></i>Logout </a>
             </nav>
@@ -115,5 +111,6 @@
     <script type="module" src="../JavaScript/login.js"></script>
     <script type="module" src="../JavaScript/setting.js"></script>
 
-    <script src="./dashboard.js"></script>
+    <script src="../Dashboard/dashboard.js"></script>
+
 </body>
