--- a/AdminDashboard/upload.html
+++ b/AdminDashboard/upload.html
@@ -90,14 +90,13 @@
             <nav class="nav flex-column pt-3">
                 <a class="nav-link text-align-center" href="../index.html"><i
                         class="fa-solid fa-house me-3"></i>Home</a>
-                <a class="nav-link " href="./dashboard.html"><i
+                <a class="nav-link " href="./admindashboard.html"><i
                         class="fa-solid fa-table-columns me-3"></i>Dashboard</a>
-                <a class="nav-link " href="./recipe.html" id="myrecipe"><i class="fa-solid fa-utensils me-3"></i>My
+                <a class="nav-link" href="./recipe.html" id="myrecipe"><i class="fa-solid fa-utensils me-3"></i>My
                     Recipes</a>
                 <a class="nav-link active" href="./upload.html"><i class="fa-solid fa-cookie-bite me-3"></i></i>Upload
                     Recipe</a>
-                <a class="nav-link " href="./profile.html"><i class="fas fa-users me-2"></i>Profile</a>
-                <a class="nav-link " href="./settings.html"><i class="fa-solid fa-gear me-3"></i>Settings</a>
+                <a class="nav-link" href="./settings.html"><i class="fa-solid fa-gear me-3"></i>Settings</a>
                 <a class="nav-link" id="signout" href="#"><i class="fa-solid fa-right-from-bracket me-3"></i>Logout </a>
             </nav>
 
@@ -155,7 +154,8 @@
                         </form>
                     </div>
                 </div>
-                <!-- Add this HTML for the popup form -->
+
+
                 <div class="edit-popup" id="editPopup">
                     <div class="popup-content">
                         <span class="close-btn">&times;</span>
@@ -210,5 +210,6 @@
 
     <script type="module" src="../JavaScript/login.js"></script>
     <script type="module" src="./upload.js"></script>
-    <script src="./dashboard.js"></script>
+    <script src="../Dashboard/dashboard.js"></script>
+
 </body>
