--- a/Dashboard/recipe.html
+++ b/Dashboard/recipe.html
@@ -21,19 +21,24 @@
     <div class="sidebar-overlay"></div>
 
     <div class="main-wrapper">
-        <aside class="sidebar">
-            <div class="sidebar">
-                <h3 class="mb-4">Koki</h3>
-                <nav class="nav flex-column">
-                    <a class="nav-link " href="./dashboard.html"><i class="fas fa-chart-line me-2"></i>Dashboard</a>
-                    <a class="nav-link active" href="./recipe.html"><i class="fas fa-shopping-cart me-2"></i>My Recipes</a>
-                    <a class="nav-link" href="./upload.html"><i class="fas fa-utensils me-2"></i>Upload Recipe</a>
-                    <a class="nav-link" href="./recipe.html"><i class="fas fa-users me-2"></i>Profile</a>
-                    <a class="nav-link" href="./settings.html"><i class="fas fa-users me-2"></i>Settings</a>
-                    <a class="nav-link" id="logout" href="#"><i class="fas fa-users me-2"></i>Logout </a>
-                </nav>
-               
-            </div>
+        <aside class="sidebar pt-5">
+
+
+            <img src="../Assets/foodfiesta-white.png" class="ps-3" style="height: 80px;" alt="">
+            <nav class="nav flex-column pt-3">
+                <a class="nav-link text-align-center" href="../index.html"><i
+                        class="fa-solid fa-house me-3"></i>Home</a>
+                <a class="nav-link " href="./dashboard.html"><i
+                        class="fa-solid fa-table-columns me-3"></i>Dashboard</a>
+                <a class="nav-link active" href="./recipe.html" id="myrecipe"><i class="fa-solid fa-utensils me-3"></i>My
+                    Recipes</a>
+                <a class="nav-link" href="./upload.html"><i class="fa-solid fa-cookie-bite me-3"></i></i>Upload
+                    Recipe</a>
+                <a class="nav-link " href="./profile.html"><i class="fas fa-users me-2"></i>Profile</a>
+                <a class="nav-link" href="./settings.html"><i class="fa-solid fa-gear me-3"></i>Settings</a>
+                <a class="nav-link" id="signout" href="#"><i class="fa-solid fa-right-from-bracket me-3"></i>Logout </a>
+            </nav>
+
         </aside>
 
         <main class="main-content">
