--- a/Html/ramzan.html
+++ b/Html/ramzan.html
@@ -39,7 +39,7 @@
     height: 40px;
     border-radius: 50%;
     background-color: var(--blue);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     color: var(--white);
@@ -295,7 +295,7 @@
   <nav class="navbar navbar-expand-lg ">
     <div class="container-xxl">
       <div class="logo">
-        <img src="../assets/foodfiesta.png" alt="logoimage">
+        <a href="../index.html"><img src="../Assets/foodfiesta.png" alt="logoimage"></a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -460,9 +460,9 @@
     <div class="footer-container">
       <div class="footer-section">
         <div class="footer-logo">
-          <img src="./Assets/foodfiesta-white.png" alt="Born To Be Chef Logo">
+          <img src="../Assets/foodfiesta-white.png" alt="foodfiesta">
         </div>
-        <p class="footer-text">Born To Be Chef is all about redefining ‘Cooking’ for you! It’s the solution to
+        <p class="footer-text">Food Fiesta is all about redefining ‘Cooking’ for you! It’s the solution to
           that never ending problem of preparing high quality delicious food and curtailing the eating out
           habits of your loved ones! With modernized and yet simple cooking methods, you are surely in for a
           flavorsome treat with our recipes that will surely make you the next talk of the town!
@@ -509,7 +509,7 @@
   </footer>
   <!-- Copyright & Privacy Section -->
   <div class="footer-bottom">
-    <p>© Copyright 2025 All rights of publications are reserved by <span>Born To Be Chef</span>.
+    <p>© Copyright 2025 All rights of publications are reserved by <span>Food Fiesta</span>.
       Reproduction without consent is not allowed.</p>
     <a href="#">Privacy Policy</a>
   </div>
