--- a/Dashboard/profile.html
+++ b/Dashboard/profile.html
@@ -72,17 +72,17 @@
                                 <div class="profile-field" data-field="firstName">
                                     <div class="field-label">First Name</div>
                                     <div class="field-value">
-                                        <span class="value-text">Samantha</span>
+                                        <span class="value-text" id="first-name"></span>
                                         <i class="fas fa-edit edit-icon"></i>
                                     </div>
                                     <input type="text" class="field-input" value="">
                                     <button class="save-btn">Save</button>
                                 </div>
                     
-                                <div class="profile-field" data-field="lastName">
-                                    <div class="field-label">Last Name</div>
+                                <div class="profile-field" data-field="lastName" >
+                                    <div class="field-label" >Last Name</div>
                                     <div class="field-value">
-                                        <span class="value-text">Jones</span>
+                                        <span class="value-text" id="last-name"></span>
                                         <i class="fas fa-edit edit-icon"></i>
                                     </div>
                                     <input type="text" class="field-input" value="">
@@ -92,7 +92,7 @@
                                 <div class="profile-field" data-field="email">
                                     <div class="field-label">Email</div>
                                     <div class="field-value">
-                                        <span class="value-text">samantha.jones@example.com</span>
+                                        <span class="value-text" id="email"></span>
                                         <i class="fas fa-edit edit-icon"></i>
                                     </div>
                                     <input type="email" class="field-input" value="">
@@ -102,7 +102,7 @@
                                 <div class="profile-field" data-field="address">
                                     <div class="field-label">Address</div>
                                     <div class="field-value">
-                                        <span class="value-text">New York, United States</span>
+                                        <span class="value-text" id="address"></span>
                                         <i class="fas fa-edit edit-icon"></i>
                                     </div>
                                     <input type="text" class="field-input" value="">
@@ -110,9 +110,9 @@
                                 </div>
                     
                                 <div class="profile-field" data-field="contact">
-                                    <div class="field-label">Contact Number</div>
-                                    <div class="field-value">
-                                        <span class="value-text">+1 234 567 8900</span>
+                                    <div class="field-label" >Contact Number</div>
+                                    <div class="field-value"id>
+                                        <span class="value-text" id="contact-number"></span>
                                         <i class="fas fa-edit edit-icon"></i>
                                     </div>
                                     <input type="tel" class="field-input" value="">
