--- a/index.html
+++ b/index.html
@@ -781,6 +781,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
 
   <script src="./JavaScript/index.js"></script>
   <script type="module" src="./JavaScript/login.js"></script>
+  <script type="module" src="./JavaScript/signup.js"></script>
 
 </body>
 
