`Added recipe form and modal to Dashboard, updated styles and JavaScript files accordingly.`

--- a/index.html
+++ b/index.html
@@ -580,21 +580,21 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
   <!-- Popup Container -->
   <div class="popup-container" id="popupContainer">
     <div class="popup-header">
-      <span>hajramasif@gmail.com</span>
+      <span></span>
       <span class="close-btn" id="closeBtn">&times;</span>
     </div>
 
     <div class="profile-section">
       <div class="profile-img">
-        H
+      
       </div>
-      <h5>Hi, Hajra!</h5>
+      <h5></h5>
       <button class="manage-account-btn" id="manageAccountBtn">
         Manage your Google Account
       </button>
-      <button class="action-btn" id="signout">
+      <!-- <button class="action-btn" id="signout">
 
-        Sign out
+        Sign out -->
       </button>
     </div>
 
