--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-grow-1 justify-content-end gap-2">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Ramzan</a>
+                    <a href="../BornToBeChef/Html/ramzan.html" class="nav-link">Ramzan</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Drinks</a>
+                    <a href="../BornToBeChef/Html/drinks.html" class="nav-link">Drinks</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Dish Type</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Desserts</a>
+                    <a href="../BornToBeChef/Html/desserts.html" class="nav-link">Desserts</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Breakfast</a>
+                    <a href="../BornToBeChef/Html/breakfast.html" class="nav-link">Breakfast</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Lunch / Dinner</a>
+                    <a href="../BornToBeChef/Html/lunchDinner.html" class="nav-link">Lunch / Dinner</a>
                 </li>
 
             </ul>
