--- a/Dashboard/recipe.html
+++ b/Dashboard/recipe.html
@@ -123,8 +123,11 @@
                         </div>
                         
                         <div class="text-center mt-4">
-                            <button class="btn-view">Save Changes</button>
+                            <button class="btn-save" id="saveRecipe">Save Changes</button>
                         </div>
+                            
+
+
                     </form>
                 </div>
             </div>
