--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -50,6 +50,7 @@
                 <header>
                     <h2>Analytics</h2>
                     <button class="profile-trigger" id="profileTrigger">
+                        <h6 id="textForTrigger"></h6>
 
                     </button>
                 </header>
