--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
       </div>
 
       <button class="profile-trigger" id="profileTrigger">
+        <h6 id="triggerText"></h6>
       </button>
 
 
@@ -580,15 +581,21 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
   <!-- Popup Container -->
   <div class="popup-container" id="popupContainer">
     <div class="popup-header">
+        <p id="avatar-email"></p>
       <span></span>
+
       <span class="close-btn" id="closeBtn">&times;</span>
     </div>
 
     <div class="profile-section">
+    
+
       <div class="profile-img">
+      <h5 id="avatar"></h5>
       
       </div>
-      <h5></h5>
+      <h5 id="greetings"></h5>
+
       <button class="manage-account-btn" id="manageAccountBtn">
         Manage your Google Account
       </button>
