--- a/Dashboard/recipe.html
+++ b/Dashboard/recipe.html
@@ -35,6 +35,7 @@
                 <a class="nav-link" href="./upload.html"><i class="fa-solid fa-cookie-bite me-3"></i></i>Upload
                     Recipe</a>
                 <a class="nav-link " href="./profile.html"><i class="fas fa-users me-2"></i>Profile</a>
+                <a class="nav-link " href="./wishlist.html"><i class="fa-solid fa-heart me-2"></i>Wishlist</a>
                 <a class="nav-link" href="./settings.html"><i class="fa-solid fa-gear me-3"></i>Settings</a>
                 <a class="nav-link" id="signout" href="#"><i class="fa-solid fa-right-from-bracket me-3"></i>Logout </a>
             </nav>
